application.properties added

--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -53,7 +53,7 @@
 					</div>
                     <div class="mb-3">
 						
-						<input type="type" id="hairColor" name="hairColor" class="form-control form-control-lg" 
+						<input type="text" id="hairColor" name="hairColor" class="form-control form-control-lg" 
                             placeholder="Hair Color">
 					</div>
                     <div class="mb-3">
