--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -66,7 +66,6 @@
 						<input type="number" id="age" name="age" class="form-control form-control-lg" 
                             placeholder="Age">
 					</div>
-					<!-- Submit button -->
                     
                     <div class="d-grid gap-2">
                         <input class="btn btn-primary" type="submit" value="SEND"></input>
@@ -76,5 +75,6 @@
 			</div>
 		</div>
 	</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
