--- a/src/main/resources/templates/students/add.html
+++ b/src/main/resources/templates/students/add.html
@@ -34,7 +34,7 @@
                         <span th:text="${Student.age}"></span> <br>
                     </li>
                 </ol>
-				<form action="/students/add" method="post">
+				<form action="/Add" method="post">
                     
 					<div class="mb-3">
 						
@@ -75,6 +75,6 @@
 			</div>
 		</div>
 	</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    
 </body>
 </html>
