--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -12,11 +12,9 @@
 		<div class="row justify-content-center">
 			<div class="col-md-4">
 				<h1 class="text-center mt-5 mb-4">Edit Student</h1>
-				<form action="/students/edit" method="post">
+				<form action="/Edit" method="post">
                     
                     
-
-					<!-- Submit button -->
                     <div class="d-grid gap-2">
                         <input class="btn btn-primary" type="submit" value="SEND"></input>
                     </div>
