--- a/src/main/resources/templates/students/success.html
+++ b/src/main/resources/templates/students/success.html
@@ -15,7 +15,7 @@
                     <h1 class="text-center mt-5 mb-4">Success!!</h1>
 
                     <div class="d-grid gap-2">
-                        <a href="/asn2.html" class="btn btn-link">Student Data Base</a>
+                        <a href="/" class="btn btn-link">Student Data Base</a>
                     </div>
                 </div>
 
