--- a/src/main/resources/templates/students/update.html
+++ b/src/main/resources/templates/students/update.html
@@ -11,60 +11,39 @@
     <div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-4">
-				<h1 class="text-center mt-5 mb-4">Add Student</h1>
-                <h2 class="text-center mt-5 mb-4">Students</h2>
-                <ol>
-                    <li th:each="Student:${std}">
-                        <span>Name:</span>
-                        <span th:text="${Student.name}"></span>
-                        <span>,</span>
-                        <span>Weight (kg):</span>
-                        <span th:text="${Student.weight}"></span>
-                        <span>,</span>
-                        <span>Height (cm):</span>
-                        <span th:text="${Student.height}"></span>
-                        <span>,</span>
-                        <span>Hair Color:</span>
-                        <span th:text="${Student.hairColor}"></span>
-                        <span>,</span>
-                        <span>gpa:</span>
-                        <span th:text="${Student.gpa}"></span>
-                        <span>,</span>
-                        <span>age:</span>
-                        <span th:text="${Student.age}"></span> <br>
-                    </li>
-                </ol>
-				<form action="/Add" method="post" name="theForm">
+				<h1 class="text-center mt-5 mb-4">Update Student</h1>
+
+				<form action="/Update" method="post" th:object="${std}">
                     
 					<div class="mb-3">
 						
 						<input type="text" id="name" name="name" class="form-control form-control-lg" 
-                            placeholder="Name" onkeyup="checkAddAndUpdate()">
+                            placeholder="Name" th:value="${std.name}" onkeyup="checkAddAndUpdate()">
 					</div>
 					<div class="mb-3">
 						
 						<input type="number" id="weight" name="weight" class="form-control form-control-lg" 
-                            placeholder="Weight (kg)" onkeyup="checkAddAndUpdate()">
+                            placeholder="Weight (kg)" th:value="${std.weight}" onkeyup="checkAddAndUpdate()">
 					</div>
                     <div class="mb-3">
 						
 						<input type="number" id="height" min="0" name="height" class="form-control form-control-lg" 
-                            placeholder="Height (cm)" onkeyup="checkAddAndUpdate()">
+                            placeholder="Height (cm)" th:value="${std.height}" onkeyup="checkAddAndUpdate()">
 					</div>
                     <div class="mb-3">
 						
 						<input type="text" id="hairColor" name="hairColor" class="form-control form-control-lg" 
-                            placeholder="Hair Color" onkeyup="checkAddAndUpdate()">
+                            placeholder="Hair Color" th:value="${std.hairColor}" onkeyup="checkAddAndUpdate()">
 					</div>
                     <div class="mb-3">
 						
 						<input type="number" step="0.01" min="0" max="4.33" id="gpa" name="gpa" class="form-control form-control-lg" 
-                            placeholder="gpa" onkeyup="checkAddAndUpdate()">
+                            placeholder="gpa" th:value="${std.gpa}" onkeyup="checkAddAndUpdate()">
 					</div>
                     <div class="mb-3">
 						
 						<input type="number" id="age" min="0" name="age" class="form-control form-control-lg" 
-                            placeholder="Age" onkeyup="checkAddAndUpdate()">
+                            placeholder="Age" th:value="${std.age}" onkeyup="checkAddAndUpdate()">
 					</div>
                     
                     <div class="d-grid gap-2">
