--- a/src/main/resources/templates/students/showAll.html
+++ b/src/main/resources/templates/students/showAll.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!-- Head content -->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>showall</title>
+    <title>Display Student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <main class="container-fluid">
+    <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <h1>USERS</h1>
-                <ul>
-                    <li th:each="Student:${std}">
-                        <span th:text="${Student.name}"></span>
-                        <span th:text="${Student.gpa}"></span> <br>
-                    </li>
-                </ul>
+                <h1 class="text-center mt-5 mb-4">Display Students</h1>
+
+                <div th:each="student: ${std}">
+                    <div class="student-container text-center" th:style="${'border-color: ' + student.hairColor +
+                     '; width: ' + (100 + student.weight) + 'pt; height: ' + (100 + student.height) + 'pt;'}">
+
+                        <span th:text="${student.name}" th:style="${'color: ' + student.hairColor +
+                         '; padding: 5px; display: inline-block; font-size: ' + student.age + 'pt;'}"></span>
+                        <br/>
+                        <span th:text="${student.gpa}" th:style="${'padding: 5px; display: inline-block;'}"></span>
+
+                    </div>
+                </div>
+
+
+                <div class="d-grid gap-2">
+                    <a href="/" class="btn btn-link">Student Data Base</a>
+                </div>
+
             </div>
         </div>
-
-    </main>
-
-    
+    </div>
 </body>
 </html>
+
+
