--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Student</title>
+    <title>Edit Student - Input</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <div class="container-fluid">
-		<div class="row justify-content-center">
-			<div class="col-md-4">
-				<h1 class="text-center mt-5 mb-4">Edit Student</h1>
-                <h2 class="text-center mt-5 mb-4">Students</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <h1 class="text-center mt-5 mb-4">Edit Student</h1>
+                <h2 class="text-center mt-5 mt-4"> Students</h2>
                 <ol>
                     <li th:each="Student:${std}">
                         <span>Name:</span>
@@ -34,26 +34,24 @@
                         <span th:text="${Student.age}"></span> <br>
                     </li>
                 </ol>
-				<form action="/Edit" method="post">
-                    
-                    <div class="mb-3">
-						<input type="name" id="name" name="name" class="form-control form-control-lg" 
-                            placeholder="Name" onkeyup="checkDeleteAndEdit()">
-					</div>
+
+                <form action="/Edit" method="post">
 
                     <div class="mb-3">
-						<input type="number" min="0" id="age" name="age" class="form-control form-control-lg" 
-                            placeholder="Age" onkeyup="checkDeleteAndEdit()">
-					</div>
+                        <input type="text" id="name" name="name" class="form-control form-control-lg" onkeyup="checkDeleteAndEdit()" placeholder="Name" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <input type="number" id="age" name="age" class="form-control form-control-lg" onkeyup="checkDeleteAndEdit()" placeholder="Age" required>
+                    </div>
 
                     <div class="d-grid gap-2">
-                        <input class="btn btn-primary" type="submit" value="SEND" disabled="disabled"></input>
+                        <input class="btn btn-primary" type="submit" disabled="disabled" value="Submit">
                     </div>
-                    
-				</form>
-			</div>
-		</div>
-	</div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 <script src="/js/script.js"></script>
 </body>
