--- a/src/main/resources/templates/students/update.html
+++ b/src/main/resources/templates/students/update.html
@@ -14,6 +14,8 @@
 				<h1 class="text-center mt-5 mb-4">Update Student</h1>
 
 				<form action="/Update" method="post" th:object="${std}">
+
+                    <input type="hidden" th:field="*{uid}" />
                     
 					<div class="mb-3">
 						
