fixed the button

--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="d-grid gap-2">
-                        <input class="btn btn-primary" type="submit" disabled="disabled" value="Submit">
+                        <input class="btn btn-primary" type="submit" disabled="disabled" value="SEND">
                     </div>
                 </form>
             </div>
